--- a/index.html
+++ b/index.html
@@ -370,8 +370,8 @@
 
     <script>
         // === CONFIGURATION (UPDATED) ===
-        const OWNER = "DPModsYT";
-const REPO  = "animkeylogspanel";
+        const OWNER = "HanzyTzy-ID";
+const REPO  = "LoginAdmin";
 const FILE  = "Key.json";
 const BRANCH = "main";
 const TOKEN = "ghp_xxxxxxxxxxxxx"; // GitHub PAT (repo)
@@ -808,4 +808,5 @@ toast("Changes Saved to Github!");
         }
     </script>
 </body>
+
 </html>
