Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 const REPO  = "LoginAdmin";
 const FILE  = "Key.json";
 const BRANCH = "main";
-const TOKEN = "ghp_xxxxxxxxxxxxx"; // GitHub PAT (repo)
+const TOKEN = "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"; // GitHub PAT (repo)
 const API = `https://api.github.com/repos/${OWNER}/${REPO}/contents/${FILE}`;
 let FILE_SHA = null;
         
@@ -810,3 +810,4 @@ toast("Changes Saved to Github!");
 </body>
 
 </html>
+
